
# Future

## New Tools

## New Features

## Fixes
- `zone`: fix display of distance from cage for small pets in assignment dialog
- `modtools/create-item`: now functions properly when the ``reaction-gloves`` tweak is active
- `blueprint`: correctly record stockpile ("place") blueprints when there are adjacent non-rectangular stockpiles of identical types

## Misc Improvements
- `caravan`: display who is in the cages you are selecting for trade and whether they are hostile
- `regrass`: Can now add grass to stairs, ramps, ashes, buildings, muddy stone, shrubs, and trees
- `regrass`: Can now restrict regrass effect to specified tile, block, cuboid, or z-levels
- `regrass`: Can now add grass in map blocks where there hasn't been any, force specific grass type
- `createitem`: refactored to use ``Items::createItem()`` API function
- `dig`: warm/damp/aquifer status will now be shown in mining mode for tiles that your dwarves can see from the level below

## Documentation
- Quickfort Blueprint Library: embed demo video for pump stack blueprint

## API
- ``dfhack.items.getReadableDescription()``: easy API for getting a human-readable item description with useful annotations and information (like tattered markers or who is in a cage)
- ``Items::createItem``: now returns a list of item pointers rather than a single ID, moved creator parameter to beginning, added growth_print and no_floor parameters at end

## Lua
- ``dfhack.internal.setClipboardTextCp437Multiline``: for copying multiline text to the system clipboard

## Removed

# 50.13-r1.1

## Documentation
- Update docs on release procedures and symbol generation

# 50.13-r1

## Fixes
- Fixed misidentification of visitors from your own civ as residents; affects all tools that iterate through citizens/residents
- `cursecheck`: act on selected unit only if a unit is selected
- Fixed incorrect DFHack background window texture when DF is started in ascii mode and subsequently switched to graphics mode

## Misc Improvements